    too shortly
  * LockScreenController: ignore icon_paths_changed signal in
    menumanager for Lockscreen

  [ Andrea Azzarone ]
  * Properly handle the file manager copy dialog in
    FileManagerLauncherIcon and in StorageLauncherIcon. (LP: #1575452,
    LP: #1609845)
  * Correctly position the force quit dialog when scaling is different
    than 1.0 (LP: #1637991)

 -- Marco Trevisan (Treviño) <mail@3v1n0.net>  Tue, 04 Jul 2017 18:12:47 +0200

unity (7.4.0+16.04.20160906-0ubuntu1) xenial; urgency=medium

  [ Marco Trevisan (Treviño) ]
  * SwitcherView: always disable animations when in lowgfx mode (LP:
    #1602784)

  [ Andrea Azzarone ]
  * When locked discard damages from windows below lockscreen. (LP:
    #1605180)
  * DecoratedWindow: display unmaximize button if the window is
    vertically or horizontally maximized (LP: #1608480)
  * Make sure the switcher detail view is properly scaled. Also scale
    the xy_offset to make sure the switcher and launcher do not overlap.
    (LP: #1605256)
  * Close session dialog on first ESC. (LP: #1521116)
  * Filter out scrolling envents for FilterExpanderLabel. (LP: #1604632)
  * Disable menu discovery animation if MenusDiscoveryDuration is 0.
    (LP: #942962)
  * Redraw fake decorations on window resize. (LP: #940470)
  * Use compiz::Window::serverNext instead of compiz::Window::next in
    IsWindowObscured as the latter can be outdated just after
    scale/spread terminates. (LP: #1614116)

  [ Marco Trevisan (Treviño) ]
  * DecoratedWindow: avoid deferencing an invalid shadow texture ptr,
    and split functions (LP: #1608464)
  * DecoratedWindow: display unmaximize button if the window is
    vertically or horizontally maximized (LP: #1608480)
  * DecorationsForceQuitDialog: make CSS selectors work with gtk 3.20
  * UserAuthenticatorPam: ensure pam_handle_ is null initialized and
    don't proceed if not set (LP: #1611668)
  * DecorationStyle: set css name for Gtk 3.20